src/components/Input/style.scss
@import url('../../assets/fonts/usual');

._Input {
    width: 100%;
    display: flex;
    margin-bottom: 18px;

    label {
        width: 100%;
        flex-grow: .6;
    }

    .input-area {
        display: flex;
        width: 100%;
        flex-grow: .4;

        .text-box {
            width: 100%;
            max-width: 180px;
            height: 19px;
            padding: 3px;
            margin: auto 0;
            border-radius: 8px;
            border-style: solid;
            border-color: #888;
            border-width: 2px;
            transition: border-color .15s, background-color .15s;
            outline: none;
            font-family: 'usual';
            font-weight: 500;
            font-size: 14px;
        }
        .text-box.dropdown-box {
            height: 29px;
            background-color: white;
        }
        .text-box:focus, .text-box.dropdown-box:focus {
            border-color: #4941B1;
            background-color: #F2F1FF;
        }
        .control-area {
            width: 24px;
            flex-shrink: 0;
            flex-grow: 0;
            display: flex;
            flex-direction: column;
            box-sizing: border-box;
            padding-left: 8px;

            .arrow {
                background-size: contain;
                background-position: center center;
                background-repeat: no-repeat;
                width: 19px;
                height: 14px;
                background-color: transparent;
                outline: none;
                border: none;
                padding: 2px;
                margin-bottom: 4px;
                filter: invert(70%);
                transition: filter .15s;
                cursor: pointer;
            }
            .arrow:hover {
                filter: invert(22%) sepia(56%) saturate(2475%) hue-rotate(231deg) brightness(99%) contrast(93%);
            }
            .arrow.down {
                transform: scaleY(-1);
                margin-bottom: 0;
                margin-top: 4px;
            }
        }
    }
}

